--- a/src/components/restaurant/styles.less
+++ b/src/components/restaurant/styles.less
@@ -4,17 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  flex-basis: 23%;
-  margin: 0 1% 80px;
-
-  .responsive(@mediumView, {
-    flex-basis: 31%;
-  });
-
-  .responsive(@smallView, {
-    flex-basis: 90%;
-    margin: 0 5% 80px;
-  });
+  margin-bottom: 80px;
 
   .thumb {
     width: 100%;
